# cpp_opengl_app_template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
source/: main.cpp
